[gd_scene load_steps=7 format=3 uid="uid://qrxmn08gi1e4"]

[ext_resource type="Script" uid="uid://deoyhxk3nrdbm" path="res://menus/main/main_menu.gd" id="1_06t4h"]
[ext_resource type="FontFile" uid="uid://cxit8lrord42r" path="res://UI/BoldPixels.ttf" id="2_7vrkn"]
[ext_resource type="Texture2D" uid="uid://b14tugcm83q3v" path="res://menus/main/Stickman Spritesheet_gun.png" id="3_fu7sn"]

[sub_resource type="Theme" id="Theme_fu7sn"]

[sub_resource type="FontVariation" id="FontVariation_fu7sn"]
base_font = ExtResource("2_7vrkn")

[sub_resource type="LabelSettings" id="LabelSettings_jix8l"]
font = SubResource("FontVariation_fu7sn")
font_size = 111

[node name="main_menu" type="Node2D"]
script = ExtResource("1_06t4h")
tween_intensity = 1.2
tween_duration = 0.2

[node name="play" type="Button" parent="."]
offset_left = 81.0
offset_top = 90.0
offset_right = 556.9054
offset_bottom = 207.0
theme = SubResource("Theme_fu7sn")

[node name="Label" type="Label" parent="play"]
layout_mode = 0
offset_left = 129.0
offset_top = 1.0
offset_right = 337.0
offset_bottom = 113.0
text = "Play"
label_settings = SubResource("LabelSettings_jix8l")

[node name="controls" type="Button" parent="."]
offset_left = 81.0
offset_top = 251.0
offset_right = 556.9054
offset_bottom = 368.0

[node name="Label" type="Label" parent="controls"]
layout_mode = 0
offset_left = 39.0
offset_top = 3.0
offset_right = 441.0
offset_bottom = 115.0
text = "Controls"
label_settings = SubResource("LabelSettings_jix8l")

[node name="quit" type="Button" parent="."]
offset_left = 77.0
offset_top = 410.0
offset_right = 552.9054
offset_bottom = 527.0

[node name="Label" type="Label" parent="quit"]
layout_mode = 0
offset_left = 129.0
offset_top = 1.0
offset_right = 337.0
offset_bottom = 113.0
text = "Quit"
label_settings = SubResource("LabelSettings_jix8l")

[node name="StickmanSpritesheetGun2" type="Sprite2D" parent="."]
position = Vector2(856.8304, 349.25)
scale = Vector2(21.696428, 21.696428)
texture = ExtResource("3_fu7sn")

[connection signal="focus_entered" from="play" to="." method="_on_play_focus_entered"]
[connection signal="mouse_entered" from="play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="play" to="." method="_on_play_mouse_exited"]
[connection signal="pressed" from="play" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="play/Label" to="." method="_on_label_mouse_entered"]
[connection signal="mouse_entered" from="controls" to="." method="_on_controls_mouse_entered"]
[connection signal="mouse_exited" from="controls" to="." method="_on_controls_mouse_exited"]
[connection signal="pressed" from="controls" to="." method="_on_controls_pressed"]
[connection signal="mouse_entered" from="quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
